Fix incorrect alignment of main page header text (week 1 2 3)

--- a/hotshopper/static/hotshopper.css
+++ b/hotshopper/static/hotshopper.css
@@ -177,6 +177,10 @@ td.header_buttons, td.menu_buttons {
     text-align: right;
 }
 
+td.header_text {
+    text-align: center;
+}
+
 td.shopping_list_item_name {
     padding-left: 10px;
 }
